# Word-Clear

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Word_Clear.sln
Client/: Client.cpp  Client.vcxproj  Client.vcxproj.filters  Committer.cpp  Committer.h  Player.cpp  Player.h  Word.h  client.cpp  client.h  database.db  main.cpp  pch.h  pdcurses.lib  sql.cpp  sql.h  sqlite3.exp  sqlite3.lib  user.h
Client_GUI/: Client_GUI.vcxproj  Client_GUI.vcxproj.filters  Committer.h  CommitterMainControl.h  MainForm.cpp  MainForm.h  Player.h  PlayerMainControl.cpp  PlayerMainControl.h  RankForm.h  client.cpp  commit.h  login.cpp  login.h  login.resx  loginForm.h  loginForm.resx  playForm.cpp  playForm.h  queryForm.cpp  queryForm.h  queryResult.cpp  queryResult.h  questionListForm.cpp  questionListForm.h  registe.cpp  registe.h  registe.resx  schema.h  setServerForm.cpp  setServerForm.h  socketMgnt.cpp  socketMgnt.h  user.h
Server/: CMakeLists.txt  README.md  Server.cpp  Server.vcxproj  Server.vcxproj.filters  Socket.lib  Socketd.lib  Word.h  handler.cpp  handler.h  md5.cpp  pch.h  schema.cpp  schema.h  sql.cpp  sql.h  user.h  utils.cpp  word_clear_game.sql
Server/include/: Word.h  handler.h  pch.h  sql.h  user.h  utils.h
Server/src/: Server.cpp  handler.cpp  md5.cpp  pch.cpp  sql.cpp  utils.cpp
include/: sql.h
src/: handler.cpp
